...
    case viewDetails
    case quotedRepost

    var title: String {
        switch self {
        case .report:
            "Report"
        case .mute:
            "Mute"
        case .translate:
            "Translate"
        case .bookmark:
            "Bookmark"
...
