appId: com.ikuradon.Astrenza
---
- launchApp:
    clearState: true
    clearKeychain: true
- assertVisible:
    text: Astrenza
- tapOn:
    id: login.nostr_identity
- inputText: "npub1sg6plzptd64u62a878hep2kev88swjh3tw00gjsfl8f237lmu63q0uf63m"
- tapOn:
    id: login.continue
- extendedWaitUntil:
    visible:
      id: timeline.body..+
    timeout: 60000
- assertVisible:
    id: timeline.feed
